Fixing item bg color in dark mode

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,7 @@
 	--box-toggle: rgb(70, 70, 70);
 	--box-toggleOn: rgb(28 232 138);
 	--theme-toggle: rgb(80, 193, 238);
-	--item-bg: rgb(70, 70, 70);
+	--item-bg: rgb(75, 75, 75);
 	--box-shadow: none;
 }
 
